# SplineLSVI

./: pyproject.toml
optimisation/: bfgs_wrapper.py  bisect.py  laplace.py
samplers/: log_concave_sampler.py
splines/: splines.py
variational/: lsvi.py
