[build - system]
requires = ["setuptools"]
build - backend = "setuptools.build_meta"

[project]
name = "SplineLSVI"
version = "0.0.1"
description = "Non-parametric VI package with JAX."
readme = "README.md"
requires - python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Yvann Le Fay", email = "yvann.lefay@ensae.fr"},
{name = "Mateo Amazo", email = "mateo.amazon@ensae.fr"}
]

dependencies = [
    "jax",  # levy-stable-jax is not yet compatible with jax>=0.5
    "particles>=0.4",  # running experiments for comparing with SMC
    "pymc",  # running experiments for comparing with ADVI
    "blackjax",  # running experiments for comparing with stochastic gradient descent
    "timeit-decorator",  # required for benchmarking
]

[tool.setuptools.packages]
find = {}

[project.optional - dependencies]
test = [
    "pytest",  # testing
    "scikit-learn",  # benchmarking logistic regression on the MNIST dataset
    "scipy",  # required for QMC
    "levy-stable-jax",
    # required for the levy-stable implementation of LSVI, required by the Fowler's Toad displacement model
    "gmmvi",  # required for gmmvi experiment on pima
    "ucimlrepo",  # required to download Census dataset
    "polars",  # required for the census dataset
]
